--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1 class="game">Draconic Warrior</h1>
 <br>
-    <a href = "howtoplay.html" class = "button">How To Play</a>
+    <a href = "howtoplay.html" class = "button"><p style = "text-align:center;">How To Play</a><p>
     <br>
     <a href = "startplaying.html" class = "button">Start Playing</a>
     <br>
