--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <h1 class="game">Draconic Warrior</h1>
 <br>
-    <a href = "howtoplay.html" class = "button"><p style = "text-align:center;">How To Play</a><p>
-    <br>
-    <a href = "startplaying.html" class = "button">Start Playing</a>
-    <br>
-    <a href = "settings.html" class = "button">Settings</a>
+    <a href = "howtoplay.html" class = "button"><p style = "text-align:center;">How To Play</a></p>
+
+    <a href = "startplaying.html" class = "button"><p style = "text-align:center;">Start Playing</a></p>
+    
+    <a href = "settings.html" class = "button"><p style = "text-align:center;">Settings</a></p>
 </body>
 </html>
