--- a/howtoplay.html
+++ b/howtoplay.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script src="script.js"></script>
+    <title>Draconic Warrior - How To Play</title>
+</head>
+<body>
+<h1 class="game">Here are things to note before playing:</h1>
 
+  <ul>*remember to make transition by tapping with a mouse*</ul>
+  <ul>In Draconic Quest you will have to rescue a treasure that has been lost and has the power to save your kingdom.</ul>
+  <ul>Use left,right,and up to move</ul>
+   <ul>Use space to shoot</ul>
+<br>
+Now go and <a href = "startplaying.html" class = "button"><p style = "text-align:center;">Play</a></p>
+
+</body>
+</html>
