--- a/howtoplay.html
+++ b/howtoplay.html
@@ -5,7 +5,7 @@
     <script src="script.js"></script>
     <title>Draconic Warrior - How To Play</title>
 </head>
-<body class="body">
+<body>
 <h1 class="game">Here are things to note before playing:</h1>
 
   <ul>*remember to make transition by tapping with a mouse*</ul>
