--- a/howtoplay.html
+++ b/howtoplay.html
@@ -13,7 +13,7 @@
   <ul>Use left,right,and up to move</ul>
    <ul>Use space to shoot</ul>
 <br>
-Now go and <a href = "startplaying.html" class = "button"><p style = "text-align:center;">Play</a></p>
+Now go and <a href = "startplaying.html" class = "button">Play</a>
 
 </body>
 </html>
