--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <br>
     <a href = "howtoplay.html" class = "button"><p style = "text-align:center;">How To Play</a></p>
 
-    <a href = "startplaying.html" class = "button"><p style = "text-align:center;">Start Playing</a></p>
+   // <a href = "startplaying.html" class = "button"><p style = "text-align:center;">Start Playing</a></p>
 </body>
 </html>
